--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="main">
-    <img class="omelette" src="assets/images/image-omelette.jpeg" alt="image-omelette">
+    <img class="omelette" src="images/image-omelette.jpeg" alt="image-omelette">
     <div class="heading">
         <h1>Simple Omelette Recipe</h1>
         <p>An easy to quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
