--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="assets/images/favicon-32x32.png">
+  <link rel="icon" href="images/favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
   <title>Recipe</title>
 </head>
